LinkChecker: Set Downloadlink to plugin. We may need it for captchas during linkchecks Fixed AntiDdisForHosts Recaptcha2 support Added Secure Token Support for Recaptcha2

--- a/src/org/jdownloader/captcha/v2/challenge/recaptcha/v2/recaptcha.html
+++ b/src/org/jdownloader/captcha/v2/challenge/recaptcha/v2/recaptcha.html
@@ -87,7 +87,7 @@ iframe {
 						<div class="">
 							<!-- BEGIN: ReCAPTCHA implementation example. -->
 							<div data-callback="success" id="rc" class="g-recaptcha"
-								data-sitekey="%%%sitekey%%%"></div>
+								data-sitekey="%%%sitekey%%%" %%%optionals%%%></div>
 							<!-- Optional noscript fallback. -->
 							<noscript>
 								<p>Javascript is required!</p>
